<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ProgressBar
        android:id="@+id/register_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

         <EditText
             android:id="@+id/name_register"
             android:layout_width="300dp"
             android:layout_height="@dimen/input_height"
             android:layout_marginLeft="40dp"
             android:hint="@string/prompt_name"
             android:inputType="textEmailAddress"
             android:layout_marginTop="40dp" />

         <EditText
             android:id="@+id/email_register"
             android:layout_width="300dp"
             android:layout_height="@dimen/input_height"
             android:layout_marginLeft="40dp"
             android:hint="@string/prompt_email"
             android:inputType="textEmailAddress" />

         <EditText
             android:id="@+id/phone_number"
             android:layout_width="300dp"
             android:layout_height="@dimen/input_height"
             android:hint="@string/prompt_phone"
             android:inputType="phone"
             android:layout_marginLeft="40dp" />

         <EditText
             android:id="@+id/password_register"
             android:layout_width="300dp"
             android:layout_height="@dimen/input_height"
             android:hint="@string/prompt_password"
             android:inputType="textPassword"
             android:layout_marginLeft="40dp" />


         <Button
             android:id="@+id/register_btn"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:hint="@string/action_register"
             android:layout_marginLeft="40dp"
             android:layout_marginTop="50dp" />


</LinearLayout>

    </ScrollView>
</android.widget.LinearLayout>
